# IQoptionAPI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: simple_trade.py
src/iq_option_nexus_api/: __init__.py  constants.py  core.py
